// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Phabricator file info resolveDiffFileInfo() Differential revision - comparing diffs - staging repo not synced 1`] = `
Object {
  "baseCommitID": "staging-rev-raw-diff-for-diffid-2",
  "baseFilePath": ".arcconfig",
  "baseRawRepoName": "github.com/gorilla/mux",
  "commitID": "staging-rev-raw-diff-for-diffid-3",
  "filePath": ".arcconfig",
  "rawRepoName": "github.com/gorilla/mux",
}
`;

exports[`Phabricator file info resolveDiffFileInfo() Differential revision - comparing diffs - staging repo synced 1`] = `
Object {
  "baseCommitID": "diff-2",
  "baseFilePath": ".arcconfig",
  "baseRawRepoName": "github.com/lguychard/testing",
  "commitID": "diff-3",
  "filePath": ".arcconfig",
  "rawRepoName": "github.com/lguychard/testing",
}
`;

exports[`Phabricator file info resolveDiffFileInfo() Differential revision - no staging repo 1`] = `
Object {
  "baseCommitID": "base-revision",
  "baseFilePath": "helpers/add.go",
  "baseRawRepoName": "github.com/gorilla/mux",
  "commitID": "staging-rev",
  "filePath": "helpers/add.go",
  "rawRepoName": "github.com/gorilla/mux",
}
`;

exports[`Phabricator file info resolveDiffFileInfo() Differential revision - staging repo not synced 1`] = `
Object {
  "baseCommitID": "base-revision",
  "baseFilePath": "helpers/add.go",
  "baseRawRepoName": "github.com/gorilla/mux",
  "commitID": "staging-rev",
  "filePath": "helpers/add.go",
  "rawRepoName": "github.com/gorilla/mux",
}
`;

exports[`Phabricator file info resolveDiffFileInfo() Differential revision - staging repo synced 1`] = `
Object {
  "baseCommitID": "base-revision",
  "baseFilePath": "helpers/add.go",
  "baseRawRepoName": "github.com/gorilla/mux",
  "commitID": "diff-13",
  "filePath": "helpers/add.go",
  "rawRepoName": "github.com/lguychard/testing",
}
`;

exports[`Phabricator file info resolveDiffusionFileInfo() Diffusion - single file code view 1`] = `
Object {
  "commitID": "e67b3c02c7195c052acff13261f0c9fd1ba53011",
  "filePath": "mux.go",
  "rawRepoName": "github.com/gorilla/mux",
}
`;

exports[`Phabricator file info resolveRevisionFileInfo() Commit view 1`] = `
Object {
  "baseCommitID": "50fbc3e7fbfcdb4fb850686588071e5f0bdd4a0a",
  "commitID": "eab9c4f3d22d907d728aa0f5918934357866249e",
  "filePath": "mux.go",
  "rawRepoName": "github.com/gorilla/mux",
}
`;
